--- a/trabajo1/index.html
+++ b/trabajo1/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="copa"></div>
+  <div class="entero">
+    <div class="copa"></div>
   <div class="sombrero"></div>  
+  </div>
+  
   <div class="cara">
     <div class="cabeza">
       <div class="ojos"></div>
